<resources>
    <string name="app_name">Today Film</string>
    <string name="app_name_ko">하루 담은 필름</string>
    <string name="app_phrase">사진 4장으로 기록하는 하루</string>
    <string name="app_footer">developed by 필름 깎는 개발자들</string>

    <string name="login">로그인</string>
    <string name="from_login_to_signup">회원이 아니면</string>

    <string name="signup">회원가입</string>
    <string name="from_signup_to_login">이미 회원이면</string>

    <string name="start">시작하기</string>
    <string name="without_login">회원가입 없이 바로</string>

    <string name="delete_account">회원탈퇴</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="rule">아이디와 비밀번호는 6~20자의 영문 및 숫자만 가능합니다.</string>

    <string name="delete_data">데이터 초기화</string>
    <string name="delete_data_check">데이터 초기화 확인</string>

    <string name="complete">완료</string>
    <string name="complete_frame">오늘의 필름 완성!</string>
    <string name="search">검색</string>
    <string name="album">내 앨범</string>
    <string name="save">저장하기</string>
    <string name="share">공유하기</string>
    <string name="play">재생하기</string>

    <string name="example_date">2022/07/13(수)</string>
    <string name="example_time">09:00 AM</string>
    <string name="example_place">광주광역시</string>

    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_pw">비밀번호를 입력하세요</string>
    <string name="hint_pw_check">비밀번호를 다시 입력하세요</string>
    <string name="hint_pw_old">기존 비밀번호를 입력하세요</string>
    <string name="hint_pw_new">새로운 비밀번호를 입력하세요</string>
    <string name="hint_pw_new_check">새로운 비밀번호를 다시 입력하세요</string>
    <string name="hint_username">닉네임을 입력하세요</string>
    <string name="hint_answer">답변을 입력하세요</string>
    <string name="hint_check">확인 문자를 입력하세요</string>
    <string name="hint_search">검색어를 입력하세요</string>
    <string name="hint_hashtag">해시태그를 입력하세요</string>
    <string name="hint_content">#내용을_입력하세요</string>
    <string name="hint_place">장소를 입력하세요</string>
    <string name="hint_save">사진첩에 저장할까요?</string>

    <string name="err_id_already_exists">이미 존재하는 아이디입니다.</string>
    <string name="err_id_not_exists">존재하지 않는 아이디입니다.</string>
    <string name="err_pw_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="err_old_pw_not_match">기존 비밀번호를 정확히 입력해주세요.</string>
    <string name="err_new_pw_not_match">새로운 비밀번호가 일치하지 않습니다.</string>
    <string name="err_check_not_match">확인 문자가 일치하지 않습니다.</string>

    <string name="warn_delete_account">정말 탈퇴 하시겠습니까?\n마지막으로 비밀번호를 확인해주세요.</string>
    <string name="warn_delete_data">정말 데이터를 초기화하시겠습니까?\n아래의 확인 문자를 입력해주세요.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start_capture">start_capture</string>
</resources>