<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_ko"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/warn_delete_account"
        android:textColor="@color/red"
        android:visibility="visible"
        android:gravity="center"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pw"
            android:inputType="text"
            android:textSize="12sp"
            android:background="@drawable/input_border"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"/>

        <TextView
            android:id="@+id/login_id_err"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/err_pw_not_match"
            android:textColor="@color/red"
            android:paddingStart="7dp"
            android:paddingVertical="4dp"
            android:textSize="12sp"
            android:visibility="visible"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/change_pw"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="13dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_footer"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        tools:ignore="SmallSp" />

</LinearLayout>