<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue_200">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name_ko"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rule_pw"
        android:textSize="13sp"
        android:textColor="@color/gray_500"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/changePassword_old_pw"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/hint_pw_old"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:textColor="@color/gray_500"
        android:textColorHint="@color/gray_200"
        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:maxLength="20"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/changePassword_new_pw"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/hint_pw_new"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:textColor="@color/gray_500"
        android:textColorHint="@color/gray_200"
        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:maxLength="20"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/changePassword_new_pw_check"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/hint_pw_new_check"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:textColor="@color/gray_500"
        android:textColorHint="@color/gray_200"
        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:maxLength="20"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/changePassword_err"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingStart="7dp"
        android:paddingVertical="4dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="12sp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePassword_btn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/white"
        android:text="@string/change_pw"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        android:text="@string/app_footer"
        android:textSize="10sp"
        android:textColor="@color/white"
        tools:ignore="SmallSp" />

</androidx.appcompat.widget.LinearLayoutCompat>