<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue_200">

    <LinearLayout


        android:layout_width="208dp"
        android:layout_height="380dp"


        android:gravity="bottom"
        android:orientation="vertical"


        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_ko"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/app_phrase"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            />

    </LinearLayout>



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_footer"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>