<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:orientation="vertical"
    android:background="@drawable/night_nostar"

    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/intro_open"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_neon"/>
        <LinearLayout
            android:id="@+id/intro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ridi"
                android:text="@string/app_name_ko"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ridi"
                android:text="@string/app_phrase"
                android:textColor="@color/white"
                android:textSize="18sp"/>


        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/intro_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingTop="70dp"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:fontFamily="@font/ridi"
            android:background="@drawable/button_c"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_signup"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/signup"
            android:textSize="20sp"
            android:fontFamily="@font/ridi"
            android:background="@drawable/button_c"
            android:textColor="@color/white"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ridi"
        android:text="@string/app_footer"
        android:textSize="10sp"
        android:textColor="@color/white"
        tools:ignore="SmallSp" />

</androidx.appcompat.widget.LinearLayoutCompat>
