<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPasswordActivity"
    android:orientation="vertical"
    android:background="@color/blue_200">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingTop="50dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/findPassword_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/findPassword_id"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@drawable/input_border"
                android:hint="@string/hint_id"
                android:inputType="text"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/findpassword_questions"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_border"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/findPassword_answer"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@drawable/input_border"
                android:hint="@string/hint_answer"
                android:inputType="text"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_check_circle"
                android:drawablePadding="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/changePassword_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/findPassword_new_pw"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@drawable/input_border"
                android:hint="@string/hint_pw_new"
                android:inputType="textPassword"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/findPassword_new_pw_check"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/input_border"
                android:hint="@string/hint_pw_new_check"
                android:inputType="textPassword"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/findPassword_err"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:paddingVertical="4dp"
            android:text=""
            android:textColor="@color/red"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findPassword_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="13dp"
            android:backgroundTint="@color/white"
            android:text="@string/complete"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:text="@string/app_footer"
        android:textSize="10sp"
        android:textColor="@color/white"
        tools:ignore="SmallSp" />

</androidx.appcompat.widget.LinearLayoutCompat>